# cacheman

./: Cargo.toml  readme.md
resource/: cacheman.service
src/: get_pacman_configuration.rs  main.rs  neighbor_discovery.rs  service.rs  test_utils.rs
src/get_pacman_configuration/: cache_dir.rs  upstream_url.rs
src/neighbor_discovery/: advertise.rs  browse.rs  zbus_binding.rs
src/neighbor_discovery/zbus_binding/: entry_group.rs  server.rs  server2.rs  service_browser.rs
src/service/: peer_cache_router.rs  redirect_upstream.rs
