[package]
name = "cacheman"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-files = "0.6.6"
actix-web = "4.10.2"
anyhow = "1.0.98"
env_logger = "0.11.8"
futures = "0.3.31"
hostname = "0.4.1"
log = "0.4.27"
reqwest = "0.12.15"
tokio = { version = "1.45.0", features = ["fs", "macros", "process", "rt-multi-thread", "time"] }
zbus = { version = "5.6.0", features = ["tokio"], default-features = false }

[dev-dependencies]
indoc = "2.0.6"
rand = "0.9.1"
tempfile = "3.19.1"
